--- a/result.html
+++ b/result.html
@@ -10,26 +10,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
 <style>
-/* Same styles as before */
 body { font-family: 'SolaimanLipi', sans-serif; background: #FFFFFF; margin: 0; padding: 20px; text-align:center; }
 a { color: #2980b9; text-decoration: none; }
 a:hover { text-decoration: underline; }
 #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
 .not-found { text-align: center; padding: 50px; color: #e74c3c; }
 .certificate-container { max-width: 900px; margin: 20px auto; background: #fff; border-radius: 15px; box-shadow: 0 12px 30px rgba(0,0,0,0.2); overflow: hidden; padding-bottom: 40px; position: relative; }
-.certificate-container::before {
-  content: "";
-  position: absolute; top: 50%; left: 50%; width: 500px; height: 500px;
-  transform: translate(-50%, -50%) rotate(-15deg);
-  background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
-  background-repeat: no-repeat; background-position: center; background-size: contain;
-  opacity: 0.08; filter: blur(1px); z-index: 0;
-}
+.certificate-container::before { content: ""; position: absolute; top: 50%; left: 50%; width: 500px; height: 500px; transform: translate(-50%, -50%) rotate(-15deg); background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png'); background-repeat: no-repeat; background-position: center; background-size: contain; opacity: 0.08; filter: blur(1px); z-index: 0; }
 .certificate-container > * { position: relative; z-index: 1; }
 .lang-toggle { text-align: right; margin-bottom: 10px; max-width: 900px; margin-left: auto; margin-right: auto; }
 .lang-toggle button { padding: 5px 12px; margin-left: 5px; cursor:pointer; border-radius:5px; border:none; background:#2980b9; color:white; }
 .lang-toggle button:disabled { background: #555; cursor: not-allowed; }
-
 .cert-header { background-color: #ffffff; padding: 20px; text-align: center; }
 .company-logo { max-height: 80px; object-fit: contain; }
 .cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
@@ -46,34 +37,10 @@ a:hover { text-decoration: underline; }
 .cert-footer { display: flex; justify-content: space-between; align-items: center; margin: 20px; padding: 10px 20px; color: #7f8c8d; font-size: 14px; }
 .qr-code { width: 90px; height: 90px; }
 .reg-number { font-weight: bold; font-size: 20px; color: #2c3e50; }
-
-.back-button {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  padding: 5px 12px;
-  cursor: pointer;
-  border-radius: 5px;
-  border: none;
-  background: #2980b9;
-  color: white;
-  font-size: 16px;
-  z-index: 1000;
-}
+.back-button { position: fixed; top: 20px; left: 20px; padding: 5px 12px; cursor: pointer; border-radius: 5px; border: none; background: #2980b9; color: white; font-size: 16px; z-index: 1000; }
 .back-button:hover { background: #1f6391; }
-
-@media print { 
-  body { background-color: #fff; } 
-  .certificate-container { box-shadow: none; margin: 0; }
-  .certificate-container::before { opacity: 0.05; }
-  #loader, .not-found, .back-button { display: none; } 
-}
-@media (max-width: 600px) { 
-  .cert-body { flex-direction: column; align-items: center; text-align: center; } 
-  .person-info { text-align: center; } 
-  .cert-footer { flex-direction: column; gap: 10px; align-items: center; } 
-  .detail-item { flex-direction: column; text-align:center; } 
-}
+@media print { body { background-color: #fff; } .certificate-container { box-shadow: none; margin: 0; } .certificate-container::before { opacity: 0.05; } #loader, .not-found, .back-button { display: none; } }
+@media (max-width: 600px) { .cert-body { flex-direction: column; align-items: center; text-align: center; } .person-info { text-align: center; } .cert-footer { flex-direction: column; gap: 10px; align-items: center; } .detail-item { flex-direction: column; text-align:center; } }
 </style>
 </head>
 <body>
@@ -98,12 +65,12 @@ a:hover { text-decoration: underline; }
 
 <script>
 const sheetID = '14M2VN-VIUkEeEzOHRYp7zmCcHOcuCJvFg_KEAkX1B-I';
-const gidBN = '804996613'; // বাংলা শিট gid
-const gidEN = '804996613'; // English শিট gid (একই শিট হলেও আলাদা চাইলে আলাদা gid)
+const gidBN = '804996613';
+const gidEN = '804996613';
 
 const dataFiles = {
-    'bn': `https://docs.google.com/spreadsheets/d/${14M2VN-VIUkEeEzOHRYp7zmCcHOcuCJvFg_KEAkX1B-I}/gviz/tq?tqx=out:json&gid=${804996613}`,
-    'en': `https://docs.google.com/spreadsheets/d/${14M2VN-VIUkEeEzOHRYp7zmCcHOcuCJvFg_KEAkX1B-I}/gviz/tq?tqx=out:json&gid=${804996613}`
+    'bn': `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&gid=${gidBN}`,
+    'en': `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&gid=${gidEN}`
 };
 
 let currentLang = 'bn';
@@ -126,140 +93,137 @@ function updateNotFoundText() {
     }
 }
 
-async function fetchSheetData(lang) {
-    const url = dataFiles[lang];
-    const res = await fetch(url);
+// Fetch and parse Google Sheet
+async function fetchSheetData(lang){
+    const res = await fetch(dataFiles[lang]);
     const text = await res.text();
     const jsonText = text.substring(text.indexOf('{'), text.lastIndexOf('}')+1);
     const sheetData = JSON.parse(jsonText);
     const rows = sheetData.table.rows;
     const headers = sheetData.table.cols.map(c => c.label);
-    return rows.map(r => {
+
+    return rows.map(r=>{
         const obj = {};
-        r.c.forEach((cell,i)=> obj[headers[i]] = cell && cell.v ? cell.v : '');
+        r.c.forEach((cell,i)=>{
+            obj[headers[i]] = cell && cell.v ? cell.v : '';
+        });
+        // Build details object from extra columns
+        const details = {};
+        for(const key in obj){
+            if(!['registration_number','name','designation','company','photo_url','logo_url'].includes(key)){
+                details[key] = obj[key];
+            }
+        }
+        obj.details = details;
         return obj;
     });
 }
 
-async function loadCertificate(lang) {
+async function loadCertificate(lang){
     currentLang = lang;
     loader.style.display = 'block';
     downloadBtn.style.display = 'none';
     certificateContainer.style.display = 'block';
-    certificateContainer.innerHTML = `<div id="loader">${lang === 'bn' ? 'লোড হচ্ছে...' : 'Loading...'}</div>`;
+    certificateContainer.innerHTML = `<div id="loader">${lang==='bn'?'লোড হচ্ছে...':'Loading...'}</div>`;
     notFound.style.display = 'none';
 
-    try {
+    try{
         const data = await fetchSheetData(lang);
-        const person = data.find(item => item.registration_number && item.registration_number.toLowerCase() === regNumber.toLowerCase());
+        const person = data.find(item=>item.registration_number && item.registration_number.toLowerCase()===regNumber?.toLowerCase());
         loader.style.display = 'none';
-        if(person) {
-            displayCertificate(person, lang, certificateContainer);
-            downloadBtn.style.display = 'inline-block';
-        } else {
-            certificateContainer.style.display = 'none';
-            notFound.style.display = 'block';
+        if(person){
+            displayCertificate(person,lang,certificateContainer);
+            downloadBtn.style.display='inline-block';
+        }else{
+            certificateContainer.style.display='none';
+            notFound.style.display='block';
             updateNotFoundText();
         }
-    } catch(error){
-        loader.style.display = 'none';
-        certificateContainer.innerHTML = '<p style="color:red;text-align:center;">Data could not be loaded. Please try again.</p>';
-        console.error(error);
+    }catch(err){
+        console.error(err);
+        loader.style.display='none';
+        certificateContainer.innerHTML='<p style="color:red;text-align:center;">Data could not be loaded. Please try again.</p>';
     }
 }
 
-function displayCertificate(person, lang, targetElement) {
+function displayCertificate(person, lang, targetElement){
     let detailsHtml = '';
-    if(person.details) {
-        for(const key in person.details) {
-            detailsHtml += `<div class="detail-item"><span class="detail-key">${key}</span><span class="detail-value">${person.details[key]}</span></div>`;
-        }
+    for(const key in person.details){
+        detailsHtml += `<div class="detail-item"><span class="detail-key">${key}</span><span class="detail-value">${person.details[key]}</span></div>`;
     }
     targetElement.innerHTML = `
-      <header class="cert-header">
-        <img src="${person.logo_url || ''}?raw=true" alt="Company Logo" class="company-logo" onerror="this.style.display='none'">
-      </header>
-      <main class="cert-body">
-        <div class="profile-picture-container">
-          <img src="${person.photo_url || ''}?raw=true" alt="Profile Photo" class="profile-picture" onerror="this.style.display='none'">
-        </div>
-        <div class="person-info">
-          <h1 class="name">${person.name}</h1>
-          <p class="designation">${person.designation}</p>
-          <p class="company">${person.company}</p>
-        </div>
-      </main>
-      <section class="cert-details">${detailsHtml}</section>
-      <footer class="cert-footer">
-        <div class="reg-number">${lang==='bn'?'রেজিস্ট্রেশন নম্বর':'Registration No'}: ${person.registration_number || 'N/A'}</div>
-        <div class="qr-code"></div>
-      </footer>
+        <header class="cert-header">
+            <img src="${person.logo_url || ''}" alt="Company Logo" class="company-logo" onerror="this.style.display='none'">
+        </header>
+        <main class="cert-body">
+            <div class="profile-picture-container">
+                <img src="${person.photo_url || ''}" alt="Profile Photo" class="profile-picture" onerror="this.style.display='none'">
+            </div>
+            <div class="person-info">
+                <h1 class="name">${person.name}</h1>
+                <p class="designation">${person.designation}</p>
+                <p class="company">${person.company}</p>
+            </div>
+        </main>
+        <section class="cert-details">${detailsHtml}</section>
+        <footer class="cert-footer">
+            <div class="reg-number">${lang==='bn'?'রেজিস্ট্রেশন নম্বর':'Registration No'}: ${person.registration_number}</div>
+            <div class="qr-code"></div>
+        </footer>
     `;
-    const qrCodeElement = targetElement.querySelector(".qr-code");
-    if(qrCodeElement){
-        qrCodeElement.innerHTML = '';
-        new QRCode(qrCodeElement, { text: window.location.href, width: 80, height: 80 });
-    }
+    const qrEl = targetElement.querySelector('.qr-code');
+    qrEl.innerHTML = '';
+    new QRCode(qrEl, { text: window.location.href, width: 80, height: 80 });
 }
 
-async function generateMultiLanguagePdf() {
-    if(!regNumber){ alert('No registration number found.'); return; }
+// PDF generation (same as before)
+async function generateMultiLanguagePdf(){
+    if(!regNumber){ alert('No registration number found'); return;}
     const originalBtnText = downloadBtn.innerHTML;
-    downloadBtn.disabled = true;
-    downloadBtn.innerHTML = 'প্রসেসিং...';
+    downloadBtn.disabled=true; downloadBtn.innerHTML='প্রসেসিং...';
     try{
         const { jsPDF } = window.jspdf;
-        const pdf = new jsPDF({ orientation: 'p', unit: 'mm', format: 'a4' });
+        const pdf = new jsPDF({ orientation:'p', unit:'mm', format:'a4' });
         const tempContainer = document.createElement('div');
-        tempContainer.className = 'certificate-container';
-        tempContainer.style.position = 'absolute';
-        tempContainer.style.left = '-9999px';
-        tempContainer.style.top = '0';
-        tempContainer.style.width = '900px';
+        tempContainer.className='certificate-container';
+        tempContainer.style.position='absolute'; tempContainer.style.left='-9999px'; tempContainer.style.top='0'; tempContainer.style.width='900px';
         document.body.appendChild(tempContainer);
-
         const [bnData,enData] = await Promise.all([fetchSheetData('bn'), fetchSheetData('en')]);
-        const bnPerson = bnData.find(item => item.registration_number.toLowerCase() === regNumber.toLowerCase());
-        const enPerson = enData.find(item => item.registration_number.toLowerCase() === regNumber.toLowerCase());
-        if(!bnPerson || !enPerson) throw new Error('Data not found');
+        const bnPerson = bnData.find(i=>i.registration_number.toLowerCase()===regNumber.toLowerCase());
+        const enPerson = enData.find(i=>i.registration_number.toLowerCase()===regNumber.toLowerCase());
+        if(!bnPerson||!enPerson) throw new Error('Data not found');
 
-        const addCanvasToPdf = async (person, lang) => {
-            displayCertificate(person, lang, tempContainer);
-            await new Promise(resolve=>{
-                const images = tempContainer.querySelectorAll('img');
-                let loaded=0;
-                if(images.length===0){resolve();return;}
-                images.forEach(img=>{ if(img.complete){loaded++;}else{img.onload=img.onerror=()=>{loaded++;if(loaded===images.length) resolve();} }});
-                if(loaded===images.length) resolve();
+        async function addCanvas(person, lang){
+            displayCertificate(person,lang,tempContainer);
+            await new Promise(r=>{
+                const imgs=tempContainer.querySelectorAll('img'); let loaded=0;
+                if(imgs.length===0){r(); return;}
+                imgs.forEach(img=>{ if(img.complete){loaded++;} else {img.onload=img.onerror=()=>{loaded++; if(loaded===imgs.length) r();} }});
+                if(loaded===imgs.length) r();
             });
             await new Promise(r=>setTimeout(r,300));
-            const canvas = await html2canvas(tempContainer, { scale:2, useCORS:true, allowTaint:true });
+            const canvas = await html2canvas(tempContainer,{scale:2,useCORS:true,allowTaint:true});
             const imgData = canvas.toDataURL('image/png');
             const imgProps = pdf.getImageProperties(imgData);
             const pdfWidth = pdf.internal.pageSize.getWidth();
             const pdfHeight = pdf.internal.pageSize.getHeight();
-            const ratio = imgProps.width / imgProps.height;
-            let imgHeight = pdfWidth / ratio;
-            if(imgHeight > pdfHeight) imgHeight = pdfHeight;
-            pdf.addImage(imgData,'PNG',0,0,pdfWidth,imgHeight);
-        };
+            const ratio = imgProps.width/imgProps.height; let imgH = pdfWidth/ratio;
+            if(imgH>pdfHeight) imgH=pdfHeight;
+            pdf.addImage(imgData,'PNG',0,0,pdfWidth,imgH);
+        }
 
-        await addCanvasToPdf(bnPerson,'bn');
+        await addCanvas(bnPerson,'bn');
         pdf.addPage();
-        await addCanvasToPdf(enPerson,'en');
+        await addCanvas(enPerson,'en');
         pdf.save(`Certificate-${regNumber}.pdf`);
         document.body.removeChild(tempContainer);
-    }catch(error){ console.error(error); alert('দুঃখিত, PDF তৈরি করা সম্ভব হয়নি।'); }
+    }catch(err){ console.error(err); alert('দুঃখিত, PDF তৈরি করা সম্ভব হয়নি।'); }
     finally{ downloadBtn.disabled=false; downloadBtn.innerHTML=originalBtnText; }
 }
 
+// Load on page
 if(regNumber) loadCertificate('bn');
-else{
-    loader.style.display='none';
-    downloadBtn.style.display='none';
-    notFound.style.display='block';
-    updateNotFoundText();
-}
+else { loader.style.display='none'; downloadBtn.style.display='none'; notFound.style.display='block'; updateNotFoundText(); }
 </script>
 </body>
 </html>
