--- a/index.html
+++ b/index.html
@@ -111,6 +111,59 @@
             color: white;
             cursor: pointer;
         }
+
+        /* Modern Search Box */
+        .search-container {
+            position: relative;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            max-width: 3xl;
+            margin: 0 auto;
+            border-radius: 9999px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            transition: box-shadow 0.3s ease;
+        }
+        .search-container:focus-within {
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        }
+        .search-input {
+            flex-grow: 1;
+            padding: 1rem 1.5rem;
+            border: 2px solid transparent;
+            transition: border-color 0.3s ease;
+        }
+        .search-input:focus {
+            outline: none;
+            border-color: var(--primary-green);
+        }
+        .search-button {
+            background-color: var(--primary-green);
+            color: white;
+            padding: 0.75rem 1.5rem;
+            transition: background-color 0.3s ease;
+        }
+        .search-button:hover {
+            background-color: var(--dark-green);
+        }
+        .floating-label {
+            position: absolute;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #9ca3af;
+            pointer-events: none;
+            transition: all 0.2s ease-out;
+            font-size: 1rem;
+        }
+        .search-input:focus + .floating-label,
+        .search-input:not(:placeholder-shown) + .floating-label {
+            top: 0.25rem;
+            font-size: 0.75rem;
+            color: var(--primary-green);
+            transform: translateY(0);
+        }
     </style>
 </head>
 <body class="bg-gray-100">
@@ -179,14 +232,10 @@
     <main>
         <div class="bg-white py-4 border-b">
             <div class="px-4">
-                <form onsubmit="searchCertificate(event)" class="max-w-3xl mx-auto flex items-center border-2 border-gray-300 rounded-md overflow-hidden">
-                    <div class="px-3 py-2 bg-gray-100">
-                        <select class="bg-transparent outline-none text-gray-600">
-                            <option>Certificates</option>
-                        </select>
-                    </div>
-                    <input id="searchInput" type="text" placeholder="Search Registration Number..." class="w-full p-2 outline-none" required>
-                    <button type="submit" class="search-btn text-white p-2">
+                <form onsubmit="searchCertificate(event)" class="search-container">
+                    <input id="searchInput" type="text" placeholder=" " class="search-input text-gray-700" required>
+                    <label for="searchInput" class="floating-label">Search for your certificate by registration number</label>
+                    <button type="submit" class="search-button">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                     </button>
                 </form>
@@ -202,7 +251,7 @@
 
         <section class="mt-10">
             <div class="flex justify-center">
-                <div class="bg-primary-green text-white px-6 py-3 rounded-lg shadow-md text-center text-2xl font-bold">
+                <div class="bg-light-green text-dark-green px-6 py-3 rounded-lg shadow-md text-center text-2xl font-bold">
                     Our Works
                 </div>
             </div>
@@ -214,7 +263,7 @@
 
         <section class="mt-10">
             <div class="flex justify-center">
-                <div class="bg-primary-green text-white px-6 py-3 rounded-lg shadow-md text-center text-2xl font-bold">
+                <div class="bg-light-green text-dark-green px-6 py-3 rounded-lg shadow-md text-center text-2xl font-bold">
                     Our Clients
                 </div>
             </div>
