--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login - Demo</title>
+  <title>Login - Admin </title>
   <style>
     :root{ --card-w:360px; }
     *{box-sizing:border-box}
