--- a/certificate.html
+++ b/certificate.html
@@ -229,11 +229,11 @@
             </a>
 
             <div class="hidden lg:flex items-center space-x-6 text-gray-700 font-medium">
-                <a href="https://gpiasiatel.com.bd/" class="nav-link">Home</a>
+                <a href="https://gpiasiatel.github.io/" class="nav-link">Home</a>
                 <a href="https://gpiasiatel.com.bd/service/" class="nav-link">Service ▾</a>
-                <a href="https://gpiasiatel.com.bd/items/" class="nav-link">Products</a>
+                <a href="https://gpiasiatel.github.io/certificate.html" class="nav-link">Certificate</a>
                 <a href="https://gpiasiatel.com.bd/projects/" class="nav-link">Projects</a>
-                <a href="https://gpiasiatel.com.bd/#" class="nav-link">Company ▾</a>
+                <a href="https://gpiasiatel.github.io/" class="nav-link">Company ▾</a>
             </div>
 
             <div class="flex items-center space-x-4">
@@ -252,11 +252,11 @@
                 </button>
             </div>
             <div class="flex flex-col space-y-4 p-4 text-gray-700 font-medium">
-                <a href="https://gpiasiatel.com.bd/" class="nav-link">Home</a>
+                <a href="https://gpiasiatel.github.io/" class="nav-link">Home</a>
                 <a href="https://gpiasiatel.com.bd/service/" class="nav-link">Service</a>
-                <a href="https://gpiasiatel.com.bd/items/" class="nav-link">Products</a>
-                <a href="https://gpiasiatel.com.bd/projects/" class="nav-link">Projects</a>
-                <a href="https://gpiasiatel.com.bd/#" class="nav-link">Company</a>
+                <a href="https://gpiasiatel.github.io/certificate.html" class="nav-link">Certificate</a>
+                <a href="https://gpiasiatel.github.io/projects/" class="nav-link">Projects</a>
+                <a href="https://gpiasiatel.github.io/" class="nav-link">Company</a>
             </div>
         </div>
     </header>
