--- a/certificate.html
+++ b/certificate.html
@@ -224,7 +224,7 @@
         </div>
 
         <nav class="px-4 py-3 flex justify-between items-center">
-            <a href="https://gpiasiatel.com.bd" id="logo-container">
+            <a href="https://gpiasiatel.github.io/" id="logo-container">
                 <img src="https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/ca20f4b78f796a5f352677cd0e06aa9fdee4e938/foldername/GPI-AsiaTel-Logo-e1716128485650.png" alt="GPI AsiaTel Logo" class="h-10">
             </a>
 
