--- a/result.html
+++ b/result.html
@@ -16,70 +16,70 @@
     <style>
         body {
             font-family: 'Noto Sans Bengali', 'Inter', sans-serif;
-            background: #f0f2f5;
+            background: #f8fafc; /* Lighter background */
             margin: 0;
             padding: 20px;
             text-align: center;
             color: #333;
         }
-        a { color: #c0a060; text-decoration: none; }
+        a { color: #3b82f6; text-decoration: none; } /* Modern blue for links */
         a:hover { text-decoration: underline; }
         #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
-        .not-found { text-align: center; padding: 50px; color: #e74c3c; }
+        .not-found { text-align: center; padding: 50px; color: #ef4444; } /* Brighter error red */
 
         .certificate-container {
             max-width: 900px;
             margin: 20px auto;
             background: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.15);
+            border-radius: 12px; /* Slightly less rounded */
+            box-shadow: 0 10px 25px rgba(0,0,0,0.08); /* Softer shadow */
             overflow: hidden;
-            padding: 40px;
+            padding: 50px; /* More internal padding */
             position: relative;
-            border: 2px solid #c0a060;
+            border: 1px solid #e2e8f0; /* Subtle border */
         }
         .certificate-container::before {
             content: "";
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 500px;
-            height: 500px;
-            transform: translate(-50%, -50%) rotate(-15deg);
+            width: 550px; /* Slightly larger watermark */
+            height: 550px;
+            transform: translate(-50%, -50%) rotate(-10deg); /* Less aggressive rotation */
             background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/main/7photo/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
-            opacity: 0.05;
-            filter: blur(1px);
+            opacity: 0.03; /* Even lighter watermark */
+            filter: blur(0.5px); /* Softer blur */
             z-index: 0;
         }
         .certificate-container > * { position: relative; z-index: 1; }
 
-        .lang-toggle { text-align: right; margin-bottom: 10px; max-width: 900px; margin-left: auto; margin-right: auto; }
+        .lang-toggle { text-align: right; margin-bottom: 15px; max-width: 900px; margin-left: auto; margin-right: auto; }
         .lang-toggle button {
-            padding: 10px 20px;
-            margin-left: 10px;
+            padding: 10px 22px;
+            margin-left: 12px;
             cursor: pointer;
-            border-radius: 25px;
+            border-radius: 8px; /* Slightly less rounded for a cleaner look */
             border: none;
-            background: #2c3e50;
+            background: #3b82f6; /* Modern blue */
             color: white;
-            font-weight: bold;
+            font-weight: 600; /* Slightly bolder */
             transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Softer shadow for buttons */
         }
-        .lang-toggle button:hover:enabled { background: #34495e; transform: translateY(-2px); }
-        .lang-toggle button:disabled { background: #95a5a6; cursor: not-allowed; }
+        .lang-toggle button:hover:enabled { background: #2563eb; transform: translateY(-1px); }
+        .lang-toggle button:disabled { background: #cbd5e1; cursor: not-allowed; } /* Lighter disabled state */
 
         .cert-header {
             background-color: transparent;
-            padding: 0 0 20px 0;
+            padding: 0 0 30px 0; /* More space */
             text-align: center;
-            border-bottom: 1px solid #c0a060;
-            margin-bottom: 20px;
+            border-bottom: 1px solid #e5e7eb; /* Light, clean separator */
+            margin-bottom: 30px;
         }
-        .company-logo { max-height: 100px; object-fit: contain; }
+        .company-logo { max-height: 110px; object-fit: contain; } /* Slightly larger logo */
 
         .cert-body {
             display: flex;
@@ -88,67 +88,88 @@
             text-align: center;
             padding: 20px 0;
         }
-        .profile-picture-container { margin-bottom: 20px; }
-        .profile-picture { width: 180px; height: 180px; border-radius: 50%; object-fit: cover; border: 4px solid #c0a060; }
-        .person-info { margin-top: 10px; }
-        .person-info .name { font-size: 36px; margin: 0; color: #2c3e50; font-weight: bold; }
-        .person-info .designation { font-size: 24px; margin: 5px 0; color: #c0a060; }
-        .person-info .company { font-size: 20px; color: #555; }
+        .profile-picture-container { margin-bottom: 25px; } /* More space */
+        .profile-picture { width: 160px; height: 160px; border-radius: 50%; object-fit: cover; border: 4px solid #3b82f6; } /* Modern blue border */
+        .person-info { margin-top: 15px; }
+        .person-info .name { font-size: 38px; margin: 0; color: #1f2937; font-weight: 700; } /* Larger, bolder name */
+        .person-info .designation { font-size: 26px; margin: 8px 0; color: #3b82f6; } /* Modern blue for designation */
+        .person-info .company { font-size: 20px; color: #6b7280; } /* Softer gray for company */
 
         .cert-details {
-            margin: 40px 0;
-            padding: 20px;
-            border: 1px dashed #bdc3c7;
-            border-radius: 10px;
-            background-color: #f9f9f9;
+            margin: 50px 0; /* More vertical space */
+            padding: 25px; /* More internal padding */
+            border: 1px solid #e5e7eb; /* Clean solid border */
+            border-radius: 8px;
+            background-color: #fcfdfe; /* Very light background */
         }
-        .detail-item { padding: 10px 0; border-bottom: 1px dashed #e0e0e0; font-size: 18px; display: flex; justify-content: space-between; align-items: center; }
+        .detail-item { padding: 15px 0; border-bottom: 1px solid #f3f4f6; /* Very light separator */
+            font-size: 18px; display: flex; justify-content: space-between; align-items: center; }
         .detail-item:last-child { border-bottom: none; }
-        .detail-key { font-weight: bold; color: #2c3e50; }
-        .detail-value { color: #555; }
+        .detail-key { font-weight: 600; color: #1f2937; } /* Bolder key */
+        .detail-value { color: #4b5563; } /* Slightly darker value */
 
         .cert-footer {
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #c0a060;
+            margin-top: 50px; /* More space */
+            padding-top: 30px;
+            border-top: 1px solid #e5e7eb; /* Clean separator */
         }
-        .qr-code { width: 100px; height: 100px; }
-        .reg-number { font-weight: bold; font-size: 24px; color: #2c3e50; text-align: right; }
+        .qr-code { width: 110px; height: 110px; } /* Slightly larger QR */
+        .reg-number { font-weight: 700; font-size: 26px; color: #1f2937; text-align: right; } /* Bolder reg number */
 
         .back-button {
             position: fixed;
             top: 20px;
             left: 20px;
-            padding: 10px 20px;
+            padding: 10px 22px;
             cursor: pointer;
-            border-radius: 25px;
+            border-radius: 8px;
             border: none;
-            background: #34495e;
+            background: #4b5563; /* Darker gray for back button */
             color: white;
             font-size: 16px;
             z-index: 1000;
-            font-weight: bold;
+            font-weight: 600;
             transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-        .back-button:hover { background: #2c3e50; transform: translateY(-2px); }
+        .back-button:hover { background: #374151; transform: translateY(-1px); }
 
         @media print {
-            body { background-color: #fff; margin: 0; padding: 0; font-family: 'Noto Sans Bengali', sans-serif; }
-            .certificate-container { box-shadow: none; margin: 0; border-radius: 0; background-image: none; padding: 0; border: none; }
-            .certificate-container::before { opacity: 0.04; }
+            body { 
+                background-color: #fff; 
+                margin: 0; 
+                padding: 0; 
+                font-family: 'Noto Sans Bengali', sans-serif;
+            }
+            .certificate-container { 
+                box-shadow: none; 
+                margin: 0; 
+                border-radius: 0; 
+                background-image: none; 
+                padding: 0; 
+                border: none;
+                width: 210mm; /* A4 width */
+                min-height: 297mm; /* A4 height */
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between; /* Distribute content nicely */
+            }
+            .certificate-container::before { opacity: 0.03; width: 400px; height: 400px; } /* Smaller, fainter watermark for print */
             #loader, .not-found, .back-button, .lang-toggle, #download-btn { display: none; }
-            .cert-header { padding-top: 30px; border-bottom: 1px solid #c0a060; }
-            .cert-body { padding: 20px 0; }
-            .profile-picture { width: 150px; height: 150px; border: 3px solid #c0a060; }
-            .person-info .name { font-size: 30px; }
+            
+            .cert-header { padding-top: 30px; border-bottom: 1px solid #e5e7eb; margin-bottom: 20px; }
+            .company-logo { max-height: 90px; }
+            .cert-body { padding: 15px 0; }
+            .profile-picture { width: 140px; height: 140px; border: 3px solid #3b82f6; }
+            .person-info .name { font-size: 32px; }
             .person-info .designation { font-size: 22px; }
-            .cert-details { margin: 20px 0; padding: 15px; border-radius: 0; border: 1px dashed #bdc3c7; }
-            .detail-item { font-size: 16px; }
-            .cert-footer { margin-top: 30px; border-top: 1px solid #c0a060; }
+            .person-info .company { font-size: 18px; }
+            .cert-details { margin: 25px 0; padding: 15px; border-radius: 0; border: 1px solid #e5e7eb; }
+            .detail-item { font-size: 16px; padding: 10px 0; }
+            .cert-footer { margin-top: 25px; padding-top: 15px; border-top: 1px solid #e5e7eb; justify-content: space-around; } /* More balanced footer for print */
             .reg-number { font-size: 20px; }
             .qr-code { width: 80px; height: 80px; }
         }
@@ -158,7 +179,10 @@
             .cert-body { flex-direction: column; align-items: center; text-align: center; }
             .person-info { text-align: center; }
             .cert-footer { flex-direction: column; gap: 10px; align-items: center; }
-            .detail-item { flex-direction: column; text-align: center; }
+            .detail-item { flex-direction: column; text-align: center; align-items: center; }
+            .lang-toggle { text-align: center; }
+            .lang-toggle button { margin: 5px; }
+            .back-button { top: 10px; left: 10px; padding: 8px 16px; font-size: 14px; }
         }
     </style>
 </head>
