--- a/result.html
+++ b/result.html
@@ -78,6 +78,10 @@
             text-align: center;
             border-bottom: 1px solid #d1d5db;
             margin-bottom: 30px;
+            /* Flexbox for centering logo */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .company-logo { max-height: 110px; object-fit: contain; }
 
@@ -149,29 +153,30 @@
                 margin: 0;
                 border-radius: 0;
                 background-image: none;
-                padding: 0;
+                padding: 20mm; /* Adjusted padding for print */
                 border: none;
-                width: 210mm;
-                min-height: 297mm;
+                width: 210mm; /* A4 width */
+                min-height: 297mm; /* A4 height */
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                justify-content: space-between; /* Distributes content vertically */
+                box-sizing: border-box; /* Include padding in width/height */
             }
             .certificate-container::before { opacity: 0.03; width: 400px; height: 400px; }
             #loader, .not-found, .back-button, .lang-toggle, #download-btn { display: none; }
 
-            .cert-header { padding-top: 30px; border-bottom: 1px solid #d1d5db; margin-bottom: 20px; }
-            .company-logo { max-height: 90px; }
-            .cert-body { padding: 15px 0; }
-            .profile-picture { width: 140px; height: 140px; border: 3px solid #d1a95a; }
-            .person-info .name { font-size: 32px; }
-            .person-info .designation { font-size: 22px; }
-            .person-info .company { font-size: 18px; }
-            .cert-details { margin: 25px 0; padding: 15px; border-radius: 0; border: 1px solid #e5e7eb; }
-            .detail-item { font-size: 16px; padding: 10px 0; }
-            .cert-footer { margin-top: 25px; padding-top: 15px; border-top: 1px solid #d1d5db; justify-content: space-around; }
-            .reg-number { font-size: 20px; }
-            .qr-code { width: 80px; height: 80px; }
+            .cert-header { padding-top: 0; border-bottom: 1px solid #d1d5db; margin-bottom: 15mm; } /* Adjusted margin for print */
+            .company-logo { max-height: 70px; } /* Slightly smaller logo for print */
+            .cert-body { padding: 0; margin-bottom: 15mm; } /* Adjusted margin for print */
+            .profile-picture { width: 120px; height: 120px; border: 3px solid #d1a95a; } /* Smaller photo for print */
+            .person-info .name { font-size: 28px; } /* Adjusted font sizes for print */
+            .person-info .designation { font-size: 20px; }
+            .person-info .company { font-size: 16px; }
+            .cert-details { margin: 0; padding: 10mm; border-radius: 0; border: 1px solid #e5e7eb; margin-bottom: 15mm; } /* Adjusted padding/margin for print */
+            .detail-item { font-size: 15px; padding: 8px 0; }
+            .cert-footer { margin-top: 0; padding-top: 15mm; border-top: 1px solid #d1d5db; justify-content: space-around; }
+            .reg-number { font-size: 18px; }
+            .qr-code { width: 70px; height: 70px; } /* Smaller QR for print */
         }
 
         @media (max-width: 600px) {
